Fix sash overlap

--- a/src/components/panels/sash/sash-panel.scss
+++ b/src/components/panels/sash/sash-panel.scss
@@ -52,6 +52,6 @@
 	&.type-perform {
 		background-color: rgba(colors.$ability-perform, 0.4);
 		border-color: rgba(colors.$ability-perform, 0.6);
-		color: rgba(colors.$ability-perform, 0.9);
+		color: rgba(0, 0, 0, 0.5);
 	}
 }
